--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
-  "version": "0.0.0",
+  "version": "0.1.0",
   "name": "router.flow",
   "description": "Type-safe routing in flow",
-  "keywords": [
-    "Router.flow",
-    "typed",
-    "flow"
-  ],
+  "keywords": ["Router.flow", "typed", "flow"],
   "main": "lib/Router",
   "module": "src/Router",
   "author": "Irakli Gozalishvili <rfobic@gmail.com> (http://jeditoolkit.com)",
@@ -15,47 +11,47 @@
   "devDependencies": {
     "alias-quokka-plugin": "^0.1.0",
     "babel-cli": "^6.26.0",
-    "babel-preset-flow-node": "^1.0.2",
+    "babel-preset-flow-node": "^2.0.1",
     "babel-register": "^6.26.0",
     "blue-tape": "^1.0.0",
-    "documentation": "^5.0.1",
-    "flow-bin": "^0.53.1",
-    "flow-copy-source": "^1.2.1",
+    "documentation": "^6.3.2",
+    "flow-bin": "^0.71.0",
+    "flow-copy-source": "^1.3.0",
     "husky": "^0.14.0",
-    "lint-staged": "^4.0.0",
-    "prettier": "^1.4.4"
+    "lint-staged": "^7.0.5",
+    "prettier": "^1.12.1"
   },
   "scripts": {
     "test": "npm run test:flow && npm run test:tape",
-    "test:tape": "blue-tape -r babel-register 'test/**/*.js'",
+    "test:tape":
+      "blue-tape -r babel-register -r source-map-support/register 'test/**/*.js'",
     "test:flow": "flow check",
     "build:clear": "rm -rf lib",
     "build:types": "flow-copy-source --verbose src lib",
     "build:node": "babel --out-dir lib src",
     "build:api": "documentation readme --section=API src/Router.js",
-    "build:docs": "documentation build --document-exported src/** -f html --o docs",
+    "build:docs":
+      "documentation build --document-exported src/** -f html --o docs",
     "build": "npm run build:node && npm run build:types",
     "prepublish": "npm run build && npm test",
     "precommit": "lint-staged",
-    "start": "flow-copy-source --watch --verbose src lib & babel --watch --out-dir lib src"
+    "start":
+      "flow-copy-source --watch --verbose src lib & babel --watch --out-dir lib src"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --parser flow --no-semi --write",
-      "git add"
-    ]
+    "*.js": ["prettier --parser flow --no-semi --write", "git add"]
   },
   "quokka": {
     "alias": {
       "router.flow": "src/Router"
     },
     "pro": true,
-    "babel": true,
-    "plugins": [
-      "alias-quokka-plugin"
-    ]
+    "babel": {
+      "env": "development"
+    },
+    "plugins": ["alias-quokka-plugin"]
   },
   "dependencies": {
-    "route.flow": "^0.1.3"
+    "route.flow": "^0.3.0"
   }
 }
